--- a/Pages/Tienda.html
+++ b/Pages/Tienda.html
@@ -12,10 +12,10 @@
         <h1><a href="../index.html">Lucien's Library</a></h1>
         <nav class="navegador">
             <ul>
-                <li><a href="Series.html">Series</a></li>
-                <li><a href="Guionistas.html">Guionistas</a></li>
-                <li><a href="Dibujantes.html">Dibujantes</a></li>
-                <li><a href="Tienda.html">Tienda</a></li>
+                <li><a class= "link" href="Series.html">Series</a></li>
+                <li><a class= "link" href="Guionistas.html">Guionistas</a></li>
+                <li><a class= "link" href="Dibujantes.html">Dibujantes</a></li>
+                <li><a class= "link" href="Tienda.html">Tienda</a></li>
             </ul>
         </nav>
     </header>
@@ -38,16 +38,16 @@
                 <input type="checkbox" id="field newsletter" class="check">Desea recibir el newsletter?
             </label>
             <p class="center-content">
-                <input type="submit" value="Enviar">
-                <input type="reset" value="Borrar">
+                <input class="button" type="submit" value="Enviar">
+                <input class="button" type="reset" value="Borrar">
             </p>
         </form>
     </main>
-    <footer class="footer">
-        <ul>
-            <li><a href="Tienda.html">Tienda</a></li>
-            <li><a href="https://www.instagram.com" target="_blank">Redes Sociales</a></li>
-            <li>Copyright</li>
+    <footer>
+        <ul class="footer">
+            <li><a class="footer__link" href="Tienda.html">Tienda</a></li>
+            <li><a class="footer__link" href="https://www.instagram.com" target="_blank">Redes Sociales</a></li>
+            <li><a class="footer__link" href="https://github.com/lucelaya" target="_blank">Copyright</a></li>
         </ul>
     </footer>
 </body>
