--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
         <h1><a href="./index.html">Lucien's Library</a></h1>
         <nav class="nav">
             <ul>
-                <li><a href="./Pages/Series.html">Series</a></li>
-                <li><a href="./Pages/Guionistas.html">Guionistas</a></li>
-                <li><a href="./Pages/Dibujantes.html">Dibujantes</a></li>
-                <li><a href="./Pages/Tienda.html">Tienda</a></li>
+                <li><a class= "link" href="./Pages/Series.html">Series</a></li>
+                <li><a class= "link" href="./Pages/Guionistas.html">Guionistas</a></li>
+                <li><a class= "link" href="./Pages/Dibujantes.html">Dibujantes</a></li>
+                <li><a class= "link" href="./Pages/Tienda.html">Tienda</a></li>
             </ul>
         </nav>
     </header>
@@ -25,6 +25,13 @@
             <h2>Bienvenido</h2>
             <p>En este sitio vas a encontrar las mejores series del noveno arte.</p>
         </div> 
+         <!-- Metemos una animacion sobre un texto -->
+         <h2 class="fade">
+            <span class="fade__content">Series</span>
+            <span class="fade__content fade-second">Dibujantes</span>
+            <span class="fade__content fade-third">Guionistas</span>
+            <span class="fade__content fade-fourth">Tienda</span>
+        </h2>
         <!-- Aca estaria bueno hacer un slider de productos o contenido -->
         <div class="cards">
             <div class="card"><a href="./Pages/Series.html"><img src="./assets/img/Sandman001.jpg" alt=""></a></div>
@@ -42,11 +49,11 @@
         <div class="banner"><img src="./assets/img/mix_comics.webp" alt="publicidad"></div>
         <div class="banner"><img src="./assets/img/mix_comics.webp" alt="publicidad"></div>
     </aside> -->
-    <footer class="footer">
-        <ul>
+    <footer>
+        <ul class="footer">
             <li><a class="footer__link" href="./pages/Tienda.html">Tienda</a></li>
             <li><a class="footer__link" href="https://www.instagram.com" target="_blank">Redes Sociales</a></li>
-            <li>Copyright</li>
+            <li><a class="footer__link" href="https://github.com/lucelaya" target="_blank">Copyright</a></li>
         </ul>
     </footer>
 </body>
