--- a/Pages/Series.html
+++ b/Pages/Series.html
@@ -12,10 +12,10 @@
         <h1><a href="../index.html">Lucien's Library</a></h1>
         <nav class="navegador">
             <ul>
-                <li><a href="Series.html">Series</a></li>
-                <li><a href="Guionistas.html">Guionistas</a></li>
-                <li><a href="Dibujantes.html">Dibujantes</a></li>
-                <li><a href="Tienda.html">Tienda</a></li>
+                <li><a class= "link" href="Series.html">Series</a></li>
+                <li><a class= "link" href="Guionistas.html">Guionistas</a></li>
+                <li><a class= "link" href="Dibujantes.html">Dibujantes</a></li>
+                <li><a class= "link" href="Tienda.html">Tienda</a></li>
             </ul>
         </nav>
     </header> 
@@ -35,11 +35,11 @@
             </ul>
         </article>
     </main>
-    <footer class="footer">
-        <ul>
-            <li><a href="Tienda.html">Tienda</a></li>
-            <li><a href="https://www.instagram.com" target="_blank">Redes Sociales</a></li>
-            <li>Copyright</li>
+    <footer>
+        <ul class="footer">
+            <li><a class="footer__link" href="Tienda.html">Tienda</a></li>
+            <li><a class="footer__link" href="https://www.instagram.com" target="_blank">Redes Sociales</a></li>
+            <li><a class="footer__link" href="https://github.com/lucelaya" target="_blank">Copyright</a></li>
         </ul>
     </footer>
 </body>
