--- a/Pages/Series.html
+++ b/Pages/Series.html
@@ -1,51 +1,109 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Bootstrap -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!-- Mis estilos -->
-    <link rel="stylesheet" href="../assets/css/style.css">
+    <link rel="stylesheet" href="../assets/css/style_.css">
     <title>Lucien's Library-Series</title>
 </head>
-<body>
+
+<body class="d-flex flex-column h-100 bg-light">
     <header>
-        <h1><a href="../index.html">Lucien's Library</a></h1>
-        <nav class="navegador">
-            <ul>
-                <li><a class= "link" href="Series.html">Series</a></li>
-                <li><a class= "link" href="Guionistas.html">Guionistas</a></li>
-                <li><a class= "link" href="Dibujantes.html">Dibujantes</a></li>
-                <li><a class= "link" href="Tienda.html">Tienda</a></li>
-            </ul>
+        <!-- <h1><a class="nav-link active" href="./index.html">Lucien's Library</a></h1> -->
+        <!-- nav -->
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="../index.html">Lucien's Library</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item"><a class="nav-link" href="Series.html">Series</a></li>
+                        <li class="nav-item"><a class="nav-link" href="Guionistas.html">Guionistas</a></li>
+                        <li class="nav-item"><a class="nav-link" href="Dibujantes.html">Dibujantes</a></li>
+                        <li class="nav-item"><a class="nav-link" href="Tienda.html">Tienda</a></li>
+                    </ul>
+                    <form class="d-flex">
+                        <input class="form-control me-2" type="search" placeholder="Search-ComingSoon..."
+                            aria-label="Search">
+                        <button class="btn btn-outline-success" type="submit">Search</button>
+                    </form>
+                </div>
+            </div>
         </nav>
-    </header> 
-    <main class="main">
-        <h2>Series</h2>
-        <article class="serie">
-            <h3>The Sandman</h3>
-            <ul class="serie__items"><!--carrusel de tapas de la serie-->
-                <li class="serie__item"><img src="../assets/img/Sandman001.jpg" alt="Sandman001" title="Sandman001"></li>
-                <li class="serie__item"><img src="../assets/img/Sandman002.jpg" alt="Sandman002" title="Sandman002"></li>
-                <li class="serie__item"><img src="../assets/img/Sandman003.jpg" alt="Sandman003" title="Sandman003"></li>
-            </ul>
-            <ul class="serie__itemDesc"><!--Info. de la serie-->
+        <!-- /nav -->
+    </header>
+
+    <!-- main -->
+    <main class="flex-shrink-0">
+        <!-- carrusel de tapas de la serie -->
+        <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-indicators">
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
+              <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
+            </div>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="../assets/img/Sandman001.jpg" class="d-block w-100 p-" alt="Sandman001" title="Sandman001">
+              </div>
+              <div class="carousel-item">
+                <img src="../assets/img/Sandman002.jpg" class="d-block w-100" alt="Sandman002" title="Sandman002">
+              </div>
+              <div class="carousel-item">
+                <img src="../assets/img/Sandman003.jpg" class="d-block w-100" alt="Sandman003" title="Sandman003">
+              </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
+          <!-- /carrusel de tapas de la serie -->
+            <!--Info. de la serie-->
+            <ul class="list-unstyled itemDesc-mine">
                 <li><p>Sandman, para empezar, es la colección de comics más unánimemente aclamada por crítica y público en los últimos años y considerada la más importante contribución de la década de los 90 al noveno arte. En ella, su guionista Neil Gaiman nos presenta a Sueño, un ser más allá de un Dios, conocido por los griegos como Morfeo y cuyo mito de poner arena en tus ojos cuando duermes viene a dar título a la colección. Así entendido, Sueño es la representación humana de esa parte oculta de la existencia que discurre paralela a la vigilia y que no es sino el sueño propiamente dicho, la fantasía si lo preferís. Sin embargo, Sueño no es único en su especie y pertenece a una antigua familia anterior aún al Universo, los Eternos, compuesta por 7 hermanos, por orden de edad los siguientes: Destino, Muerte, Sueño, Destrucción, Deseo, Desespero y Delirio.</p></li>
                 <li><p><b>Guion:</b> Neil Gaiman</p></li>
                 <li><p><b>Dibujo:</b> Dave McKean</p></li>
             </ul>
-        </article>
+
     </main>
-    <footer>
-        <ul class="footer">
-            <li><a class="footer__link" href="Tienda.html">Tienda</a></li>
-            <li><a class="footer__link" href="https://www.instagram.com" target="_blank">Redes Sociales</a></li>
-            <li><a class="footer__link" href="https://github.com/lucelaya" target="_blank">Copyright</a></li>
-        </ul>
+    <!-- /main -->
+
+    <!-- footer -->
+    <footer class="footer mt-auto py-3 bg-dark">
+        <div class="container">
+            <span class="d-flex justify-content-end">
+                <span><a class="text-muted text-decoration-none lh-1 footer__link-mine mx-3"
+                        href="Tienda.html">Tienda</a></span>
+                <span><a class="text-muted text-decoration-none lh-1 footer__link-mine mx-3" href="https://www.instagram.com"
+                        target="_blank">Redes Sociales</a></span>
+                <span><a class="text-muted text-decoration-none lh-1 footer__link-mine"
+                        href="https://github.com/lucelaya" target="_blank">Lucelaya</a></span>
+                <span class="text-muted ">&copy; 2022 All rights reserved.</span>
+            </span>
+        </div>
     </footer>
+    <!-- /footer -->
+
     <!-- JS - Bootstrap -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
+
 </body>
+
 </html>
