--- a/index.html
+++ b/index.html
@@ -1,64 +1,90 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Bootstrap -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!-- Mis estilos -->
-    <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="stylesheet" href="./assets/css/style_.css">
     <title>Lucien's Library</title>
 </head>
-<body>
+
+<body class="d-flex flex-column h-100 bg-light">
     <header>
-        <h1><a href="./index.html">Lucien's Library</a></h1>
-        <nav class="navegador">
-            <ul>
-                <li><a class= "link" href="./Pages/Series.html">Series</a></li>
-                <li><a class= "link" href="./Pages/Guionistas.html">Guionistas</a></li>
-                <li><a class= "link" href="./Pages/Dibujantes.html">Dibujantes</a></li>
-                <li><a class= "link" href="./Pages/Tienda.html">Tienda</a></li>
-            </ul>
+        <!-- <h1><a class="nav-link active" href="./index.html">Lucien's Library</a></h1> -->
+        <!-- nav -->
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="./index.html">Lucien's Library</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item"><a class="nav-link" href="./Pages/Series.html">Series</a></li>
+                        <li class="nav-item"><a class="nav-link" href="./Pages/Guionistas.html">Guionistas</a></li>
+                        <li class="nav-item"><a class="nav-link" href="./Pages/Dibujantes.html">Dibujantes</a></li>
+                        <li class="nav-item"><a class="nav-link" href="./Pages/Tienda.html">Tienda</a></li>
+                    </ul>
+                    <form class="d-flex">
+                        <input class="form-control me-2" type="search" placeholder="Search-ComingSoon..."
+                            aria-label="Search">
+                        <button class="btn btn-outline-success" type="submit">Search</button>
+                    </form>
+                </div>
+            </div>
         </nav>
+        <!-- /nav -->
     </header>
-    <main class="main">
-        <div class="main__bienvenida">
-            <h2>Bienvenido</h2>
-            <p>En este sitio vas a encontrar las mejores series del noveno arte.</p>
-        </div> 
-         <!-- Metemos una animacion sobre un texto -->
-         <h2 class="fade">
-            <span class="fade__content">Series</span>
-            <span class="fade__content fade-second">Dibujantes</span>
-            <span class="fade__content fade-third">Guionistas</span>
-            <span class="fade__content fade-fourth">Tienda</span>
+
+    <!-- main -->
+    <main class="flex-shrink-0">
+        <div class="container">
+            <h1 class="mt-3">Bienvenido</h1>
+            <p class="lead">En este sitio vas a encontrar las mejores series del noveno arte.</p>
+        </div>
+        <!-- Metemos una animacion sobre un texto -->
+        <h2 class="fade-mine">
+            <span class="fade-mine__content">Guionistas</span>
+            <span class="fade-mine__content fade-mine-second">Series</span>
+            <span class="fade-mine__content fade-mine-third">Dibujantes</span>
         </h2>
         <!-- Aca estaria bueno hacer un slider de productos o contenido -->
-        <div class="cards">
-            <div class="card"><a href="./Pages/Series.html"><img src="./assets/img/Sandman001.jpg" alt=""></a></div>
-            <div class="card"><a href="./Pages/Guionistas.html"><img src="./assets/img/Gaiman01.jpeg" alt=""></a></div>
-            <div class="card"><a href="./Pages/Dibujantes.html"><img src="./assets/img/dave01.jpeg" alt=""></a></div>
+        <div class="cards-mine">
+            <div><a href="./Pages/Guionistas.html"><img class="card-mine" src="./assets/img/Gaiman01.jpeg" alt=""></a></div>
+            <div><a href="./Pages/Series.html"><img class="card-mine" src="./assets/img/Sandman001.jpg" alt=""></a></div>
+            <div><a href="./Pages/Dibujantes.html"><img class="card-mine" src="./assets/img/dave01.jpeg" alt=""></a></div>
         </div>
     </main>
-    <!-- <aside class="asideLeft">
-        <div class="banner"><img src="./assets/img/mix_comics.webp" alt="publicidad"></div>
-        <div class="banner"><img src="./assets/img/mix_comics.webp" alt="publicidad"></div>
-        <div class="banner"><img src="./assets/img/mix_comics.webp" alt="publicidad"></div>
-    </aside>
-    <aside class="asideRight">
-        <div class="banner"><img src="./assets/img/mix_comics.webp" alt="publicidad"></div>
-        <div class="banner"><img src="./assets/img/mix_comics.webp" alt="publicidad"></div>
-        <div class="banner"><img src="./assets/img/mix_comics.webp" alt="publicidad"></div>
-    </aside> -->
-    <footer>
-        <ul class="footer">
-            <li><a class="footer__link" href="./pages/Tienda.html">Tienda</a></li>
-            <li><a class="footer__link" href="https://www.instagram.com" target="_blank">Redes Sociales</a></li>
-            <li><a class="footer__link" href="https://github.com/lucelaya" target="_blank">Copyright</a></li>
-        </ul>
+    <!-- /main -->
+
+    <!-- footer -->
+    <footer class="footer mt-auto py-3 bg-dark">
+        <div class="container">
+            <span class="d-flex justify-content-end">
+                <span><a class="text-muted text-decoration-none lh-1 footer__link-mine mx-3"
+                        href="./pages/Tienda.html">Tienda</a></span>
+                <span><a class="text-muted text-decoration-none lh-1 footer__link-mine mx-3" href="https://www.instagram.com"
+                        target="_blank">Redes Sociales</a></span>
+                <span><a class="text-muted text-decoration-none lh-1 footer__link-mine"
+                        href="https://github.com/lucelaya" target="_blank">Lucelaya</a></span>
+                <span class="text-muted ">&copy; 2022 All rights reserved.</span>
+            </span>
+        </div>
     </footer>
+    <!-- /footer -->
+
     <!-- JS - Bootstrap -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
+
 </body>
+
 </html>
