--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         <div class="container">
             <span class="d-flex justify-content-end">
                 <span><a class="text-muted text-decoration-none lh-1 footer__link-mine mx-3"
-                        href="./pages/Tienda.html">Tienda</a></span>
+                        href="./Pages/Tienda.html">Tienda</a></span>
                 <span><a class="text-muted text-decoration-none lh-1 footer__link-mine mx-3" href="https://www.instagram.com"
                         target="_blank">Redes Sociales</a></span>
                 <span><a class="text-muted text-decoration-none lh-1 footer__link-mine"
