--- a/Pages/Guionistas.html
+++ b/Pages/Guionistas.html
@@ -1,48 +1,235 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Bootstrap -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!-- Mis estilos -->
     <link rel="stylesheet" href="../assets/css/style.css">
     <title>Lucien's Library-Guionistas</title>
 </head>
-<body>
+
+<body class="d-flex flex-column h-100 bg-light">
     <header>
-        <h1><a href="../index.html">Lucien's Library</a></h1>
-        <nav class="navegador">
-            <ul>
-                <li><a class= "link" href="Series.html">Series</a></li>
-                <li><a class= "link" href="Guionistas.html">Guionistas</a></li>
-                <li><a class= "link" href="Dibujantes.html">Dibujantes</a></li>
-                <li><a class= "link" href="Tienda.html">Tienda</a></li>
-            </ul>
+        <!-- <h1><a class="nav-link active" href="./index.html">Lucien's Library</a></h1> -->
+        <!-- nav -->
+        <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="../index.html">Lucien's Library</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item"><a class="nav-link" href="Series.html">Series</a></li>
+                        <li class="nav-item"><a class="nav-link" href="Guionistas.html">Guionistas</a></li>
+                        <li class="nav-item"><a class="nav-link" href="Dibujantes.html">Dibujantes</a></li>
+                        <li class="nav-item"><a class="nav-link" href="Tienda.html">Tienda</a></li>
+                    </ul>
+                    <form class="d-flex">
+                        <input class="form-control me-2" type="search" placeholder="Search-ComingSoon..."
+                            aria-label="Search">
+                        <button class="btn btn-outline-success" type="submit">Search</button>
+                    </form>
+                </div>
+            </div>
         </nav>
-    </header> 
-    <main class="main">
-        <h2>Guionistas</h2>
-        <article class="bios">
-            <h3>Neil Gaiman</h3>
-            <ul class="bios__ul-imgs"><!--carusel de tapas de imagenes de la breve biografia-->
-                <li class="bios__ul-img"><img src="../assets/img/Gaiman01.jpeg" alt="Gaiman01" title="Gaiman01"></li>
-                <li class="bios__ul-img"><img src="../assets/img/Gaiman02.jpeg"  alt="Gaiman02" title="Gaiman02"></li>
-                <li class="bios__ul-img"><img src="../assets/img/Gaiman03.jpeg"  alt="Gaiman03" title="Gaiman03"></li>
-            </ul>
-            <!--Info. del author-->
-            <p>Neil Richard Gaiman, autor de ficción, novelas, cómics, novelas gráficas, no ficción, teatro de audio, películas e historietas y escritor británico. Cultiva el género fantástico. Sus obras incluyen la serie de cómics The Sandman y novelas Stardust, Coraline y El libro del Cementerio.</p>
-        </article>
+        <!-- /nav -->
+    </header>
+
+    <!-- main -->
+    <main class="container">
+        <h1 class="mt-3 text-center">Guionistas</h1>
+        <!-- cards de guionistas -->
+        <div class="row row-cols-1 row-cols-md-2 g-4">
+            <div class="col">
+                <div class="card mb-3" style="max-width: 540px;">
+                    <div class="row g-0">
+                        <div class="col-md-4">
+                            <div id="carouselExampleFade1" class="carousel slide carousel-fade" data-bs-ride="carousel">
+                                <div class="carousel-inner">
+                                    <div class="carousel-item active">
+                                        <img src="../assets/img/Gaiman01.jpeg" class="d-block w-100" alt="Gaiman01">
+                                    </div>
+                                    <div class="carousel-item">
+                                        <img src="../assets/img/Gaiman02.jpeg" class="d-block w-100" alt="Gaiman02">
+                                    </div>
+                                    <div class="carousel-item">
+                                        <img src="../assets/img/Gaiman03.jpeg" class="d-block w-100" alt="Gaiman03">
+                                    </div>
+                                </div>
+                                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade1"
+                                    data-bs-slide="prev">
+                                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                    <span class="visually-hidden">Previous</span>
+                                </button>
+                                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade1"
+                                    data-bs-slide="next">
+                                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                    <span class="visually-hidden">Next</span>
+                                </button>
+                            </div>
+                        </div>
+                        <div class="col-md-8">
+                            <div class="card-body">
+                                <h5 class="card-title">Neil Gaiman</h5>
+                                <p class="card-text">Neil Richard Gaiman, autor de ficción, novelas, cómics, novelas gráficas, no ficción, teatro de audio, películas e historietas y escritor británico. Cultiva el género fantástico.</p>
+                                <p class="card-text"><small class="text-muted">Sus obras incluyen la serie de cómics The Sandman y novelas Stardust, Coraline y El libro del Cementerio.</small></p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col">
+                <div class="card mb-3" style="max-width: 540px;">
+                    <div class="row g-0">
+                        <div class="col-md-4">
+                            <div id="carouselExampleFade2" class="carousel slide carousel-fade" data-bs-ride="carousel">
+                                <div class="carousel-inner">
+                                    <div class="carousel-item active">
+                                        <img src="../assets/img/Gaiman01.jpeg" class="d-block w-100" alt="Gaiman01">
+                                    </div>
+                                    <div class="carousel-item">
+                                        <img src="../assets/img/Gaiman02.jpeg" class="d-block w-100" alt="Gaiman02">
+                                    </div>
+                                    <div class="carousel-item">
+                                        <img src="../assets/img/Gaiman03.jpeg" class="d-block w-100" alt="Gaiman03">
+                                    </div>
+                                </div>
+                                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade2"
+                                    data-bs-slide="prev">
+                                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                    <span class="visually-hidden">Previous</span>
+                                </button>
+                                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade2"
+                                    data-bs-slide="next">
+                                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                    <span class="visually-hidden">Next</span>
+                                </button>
+                            </div>
+                        </div>
+                        <div class="col-md-8">
+                            <div class="card-body">
+                                <h5 class="card-title">Neil Gaiman</h5>
+                                <p class="card-text">Neil Richard Gaiman, autor de ficción, novelas, cómics, novelas gráficas, no ficción, teatro de audio, películas e historietas y escritor británico. Cultiva el género fantástico. </p>
+                                <p class="card-text"><small class="text-muted">Sus obras incluyen la serie de cómics The Sandman y novelas Stardust, Coraline y El libro del Cementerio.</small></p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col">
+                <div class="card mb-3" style="max-width: 540px;">
+                    <div class="row g-0">
+                        <div class="col-md-4">
+                            <div id="carouselExampleFade3" class="carousel slide carousel-fade" data-bs-ride="carousel">
+                                <div class="carousel-inner">
+                                    <div class="carousel-item active">
+                                        <img src="../assets/img/Gaiman01.jpeg" class="d-block w-100" alt="Gaiman01">
+                                    </div>
+                                    <div class="carousel-item">
+                                        <img src="../assets/img/Gaiman02.jpeg" class="d-block w-100" alt="Gaiman02">
+                                    </div>
+                                    <div class="carousel-item">
+                                        <img src="../assets/img/Gaiman03.jpeg" class="d-block w-100" alt="Gaiman03">
+                                    </div>
+                                </div>
+                                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade3"
+                                    data-bs-slide="prev">
+                                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                    <span class="visually-hidden">Previous</span>
+                                </button>
+                                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade3"
+                                    data-bs-slide="next">
+                                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                    <span class="visually-hidden">Next</span>
+                                </button>
+                            </div>
+                        </div>
+                        <div class="col-md-8">
+                            <div class="card-body">
+                                <h5 class="card-title">Neil Gaiman</h5>
+                                <p class="card-text">Neil Richard Gaiman, autor de ficción, novelas, cómics, novelas gráficas, no ficción, teatro de audio, películas e historietas y escritor británico. Cultiva el género fantástico. </p>
+                                <p class="card-text"><small class="text-muted">Sus obras incluyen la serie de cómics The Sandman y novelas Stardust, Coraline y El libro del Cementerio.</small></p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="col">
+                <div class="card mb-3" style="max-width: 540px;">
+                    <div class="row g-0">
+                        <div class="col-md-4">
+                            <div id="carouselExampleFade4" class="carousel slide carousel-fade" data-bs-ride="carousel">
+                                <div class="carousel-inner">
+                                    <div class="carousel-item active">
+                                        <img src="../assets/img/Gaiman01.jpeg" class="d-block w-100" alt="Gaiman01">
+                                    </div>
+                                    <div class="carousel-item">
+                                        <img src="../assets/img/Gaiman02.jpeg" class="d-block w-100" alt="Gaiman02">
+                                    </div>
+                                    <div class="carousel-item">
+                                        <img src="../assets/img/Gaiman03.jpeg" class="d-block w-100" alt="Gaiman03">
+                                    </div>
+                                </div>
+                                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade4"
+                                    data-bs-slide="prev">
+                                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                                    <span class="visually-hidden">Previous</span>
+                                </button>
+                                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade4"
+                                    data-bs-slide="next">
+                                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                                    <span class="visually-hidden">Next</span>
+                                </button>
+                            </div>
+                        </div>
+                        <!--Info. del artista-->
+                        <div class="col-md-8">
+                            <div class="card-body">
+                                <h5 class="card-title">Neil Gaiman</h5>
+                                <p class="card-text">Neil Richard Gaiman, autor de ficción, novelas, cómics, novelas gráficas, no ficción, teatro de audio, películas e historietas y escritor británico. Cultiva el género fantástico. </p>
+                                <p class="card-text"><small class="text-muted">Sus obras incluyen la serie de cómics The Sandman y novelas Stardust, Coraline y El libro del Cementerio.</small></p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- /card de guionistas -->
     </main>
-    <footer>
-        <ul class="footer">
-            <li><a class="footer__link" href="Tienda.html">Tienda</a></li>
-            <li><a class="footer__link" href="https://www.instagram.com" target="_blank">Redes Sociales</a></li>
-            <li><a class="footer__link" href="https://github.com/lucelaya" target="_blank">Copyright</a></li>
-        </ul>
+    <!-- /main -->
+
+    <!-- footer -->
+    <footer class="footer mt-auto py-3 bg-dark">
+        <div class="container">
+            <span class="d-flex justify-content-end">
+                <span><a class="text-muted text-decoration-none lh-1 footer__link-mine mx-3"
+                        href="Tienda.html">Tienda</a></span>
+                <span><a class="text-muted text-decoration-none lh-1 footer__link-mine mx-3" href="https://www.instagram.com"
+                        target="_blank">Redes Sociales</a></span>
+                <span><a class="text-muted text-decoration-none lh-1 footer__link-mine"
+                        href="https://github.com/lucelaya" target="_blank">Lucelaya</a></span>
+                <span class="text-muted ">&copy; 2022 All rights reserved.</span>
+            </span>
+        </div>
     </footer>
+    <!-- /footer -->
+
     <!-- JS - Bootstrap -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
+
 </body>
+
 </html>
