--- a/Pages/Series.html
+++ b/Pages/Series.html
@@ -9,7 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!-- Mis estilos -->
-    <link rel="stylesheet" href="../assets/css/style_.css">
+    <link rel="stylesheet" href="../assets/css/style.css">
     <title>Lucien's Library-Series</title>
 </head>
 
@@ -44,7 +44,8 @@
     </header>
 
     <!-- main -->
-    <main class="flex-shrink-0">
+    <main class="container">
+      <h1 class="text-center">Series</h1>
         <!-- carrusel de tapas de la serie -->
         <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-indicators">
