--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     <!-- Mis estilos -->
-    <link rel="stylesheet" href="./assets/css/style_.css">
+    <link rel="stylesheet" href="./assets/css/style.css">
     <title>Lucien's Library</title>
 </head>
 
@@ -44,11 +44,10 @@
     </header>
 
     <!-- main -->
-    <main class="flex-shrink-0">
-        <div class="container">
-            <h1 class="mt-3">Bienvenido</h1>
-            <p class="lead">En este sitio vas a encontrar las mejores series del noveno arte.</p>
-        </div>
+    <main class="container">
+        <!-- Quisas tenga que ver aca como dejo Lucien's Library solo como titulo o hacer link de home de la navbar como h1, veremos -->
+        <h1 class="mt-3">Bienvenido a Lucien's Library</h1>
+        <p class="lead">En este sitio vas a encontrar las mejores series del noveno arte.</p>
         <!-- Metemos una animacion sobre un texto -->
         <h2 class="fade-mine">
             <span class="fade-mine__content">Guionistas</span>
@@ -57,9 +56,12 @@
         </h2>
         <!-- Aca estaria bueno hacer un slider de productos o contenido -->
         <div class="cards-mine">
-            <div><a href="./Pages/Guionistas.html"><img class="card-mine" src="./assets/img/Gaiman01.jpeg" alt=""></a></div>
-            <div><a href="./Pages/Series.html"><img class="card-mine" src="./assets/img/Sandman001.jpg" alt=""></a></div>
-            <div><a href="./Pages/Dibujantes.html"><img class="card-mine" src="./assets/img/dave01.jpeg" alt=""></a></div>
+            <div><a href="./Pages/Guionistas.html"><img class="card-mine" src="./assets/img/Gaiman01.jpeg" alt=""></a>
+            </div>
+            <div><a href="./Pages/Series.html"><img class="card-mine" src="./assets/img/Sandman001.jpg" alt=""></a>
+            </div>
+            <div><a href="./Pages/Dibujantes.html"><img class="card-mine" src="./assets/img/dave01.jpeg" alt=""></a>
+            </div>
         </div>
     </main>
     <!-- /main -->
@@ -70,14 +72,14 @@
             <span class="d-flex justify-content-end">
                 <span><a class="text-muted text-decoration-none lh-1 footer__link-mine mx-3"
                         href="./Pages/Tienda.html">Tienda</a></span>
-                <span><a class="text-muted text-decoration-none lh-1 footer__link-mine mx-3" href="https://www.instagram.com"
-                        target="_blank">Redes Sociales</a></span>
+                <span><a class="text-muted text-decoration-none lh-1 footer__link-mine mx-3"
+                        href="https://www.instagram.com" target="_blank">Redes Sociales</a></span>
                 <span><a class="text-muted text-decoration-none lh-1 footer__link-mine"
                         href="https://github.com/lucelaya" target="_blank">Lucelaya</a></span>
                 <span class="text-muted ">&copy; 2022 All rights reserved.</span>
             </span>
         </div>
-    </footer> 
+    </footer>
     <!-- /footer -->
 
     <!-- JS - Bootstrap -->
