Limpieza de archivos viejos

--- a/Pages/Guionistas.html
+++ b/Pages/Guionistas.html
@@ -219,7 +219,7 @@
                         target="_blank">Redes Sociales</a></span>
                 <span><a class="text-muted text-decoration-none lh-1 footer__link-mine"
                         href="https://github.com/lucelaya" target="_blank">Lucelaya</a></span>
-                <span class="text-muted ">&copy; 2022 All rights reserved.</span>
+                <span class="text-muted ">&copy; 2022</span>
             </span>
         </div>
     </footer>
