Agregando contenido-Series

--- a/Pages/Guionistas.html
+++ b/Pages/Guionistas.html
@@ -45,7 +45,7 @@
 
     <!-- main -->
     <main class="container">
-        <h1 class="mt-3 text-center">Guionistas</h1>
+        <h1 class="mt-3 text-centerfade-mine"><span class="fade-mine__content">Guionistas</span></h1>
         <!-- cards de guionistas -->
         <div class="row row-cols-1 row-cols-md-2 g-4">
             <div class="col">
@@ -64,13 +64,13 @@
                                         <img src="../assets/img/Gaiman03.jpeg" class="d-block w-100" alt="Gaiman03">
                                     </div>
                                 </div>
-                                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade1"
-                                    data-bs-slide="prev">
+                                <button class="carousel-control-prev" type="button"
+                                    data-bs-target="#carouselExampleFade1" data-bs-slide="prev">
                                     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                                     <span class="visually-hidden">Previous</span>
                                 </button>
-                                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade1"
-                                    data-bs-slide="next">
+                                <button class="carousel-control-next" type="button"
+                                    data-bs-target="#carouselExampleFade1" data-bs-slide="next">
                                     <span class="carousel-control-next-icon" aria-hidden="true"></span>
                                     <span class="visually-hidden">Next</span>
                                 </button>
@@ -79,8 +79,11 @@
                         <div class="col-md-8">
                             <div class="card-body">
                                 <h5 class="card-title">Neil Gaiman</h5>
-                                <p class="card-text">Neil Richard Gaiman, autor de ficción, novelas, cómics, novelas gráficas, no ficción, teatro de audio, películas e historietas y escritor británico. Cultiva el género fantástico.</p>
-                                <p class="card-text"><small class="text-muted">Sus obras incluyen la serie de cómics The Sandman y novelas Stardust, Coraline y El libro del Cementerio.</small></p>
+                                <p class="card-text">Neil Richard Gaiman, autor de ficción, novelas, cómics, novelas
+                                    gráficas, no ficción, teatro de audio, películas e historietas y escritor británico.
+                                    Cultiva el género fantástico.</p>
+                                <p class="card-text"><small class="text-muted">Sus obras incluyen la serie de cómics The
+                                        Sandman y novelas Stardust, Coraline y El libro del Cementerio.</small></p>
                             </div>
                         </div>
                     </div>
@@ -103,13 +106,13 @@
                                         <img src="../assets/img/Gaiman03.jpeg" class="d-block w-100" alt="Gaiman03">
                                     </div>
                                 </div>
-                                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade2"
-                                    data-bs-slide="prev">
+                                <button class="carousel-control-prev" type="button"
+                                    data-bs-target="#carouselExampleFade2" data-bs-slide="prev">
                                     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                                     <span class="visually-hidden">Previous</span>
                                 </button>
-                                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade2"
-                                    data-bs-slide="next">
+                                <button class="carousel-control-next" type="button"
+                                    data-bs-target="#carouselExampleFade2" data-bs-slide="next">
                                     <span class="carousel-control-next-icon" aria-hidden="true"></span>
                                     <span class="visually-hidden">Next</span>
                                 </button>
@@ -118,8 +121,11 @@
                         <div class="col-md-8">
                             <div class="card-body">
                                 <h5 class="card-title">Neil Gaiman</h5>
-                                <p class="card-text">Neil Richard Gaiman, autor de ficción, novelas, cómics, novelas gráficas, no ficción, teatro de audio, películas e historietas y escritor británico. Cultiva el género fantástico. </p>
-                                <p class="card-text"><small class="text-muted">Sus obras incluyen la serie de cómics The Sandman y novelas Stardust, Coraline y El libro del Cementerio.</small></p>
+                                <p class="card-text">Neil Richard Gaiman, autor de ficción, novelas, cómics, novelas
+                                    gráficas, no ficción, teatro de audio, películas e historietas y escritor británico.
+                                    Cultiva el género fantástico. </p>
+                                <p class="card-text"><small class="text-muted">Sus obras incluyen la serie de cómics The
+                                        Sandman y novelas Stardust, Coraline y El libro del Cementerio.</small></p>
                             </div>
                         </div>
                     </div>
@@ -142,13 +148,13 @@
                                         <img src="../assets/img/Gaiman03.jpeg" class="d-block w-100" alt="Gaiman03">
                                     </div>
                                 </div>
-                                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade3"
-                                    data-bs-slide="prev">
+                                <button class="carousel-control-prev" type="button"
+                                    data-bs-target="#carouselExampleFade3" data-bs-slide="prev">
                                     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                                     <span class="visually-hidden">Previous</span>
                                 </button>
-                                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade3"
-                                    data-bs-slide="next">
+                                <button class="carousel-control-next" type="button"
+                                    data-bs-target="#carouselExampleFade3" data-bs-slide="next">
                                     <span class="carousel-control-next-icon" aria-hidden="true"></span>
                                     <span class="visually-hidden">Next</span>
                                 </button>
@@ -157,8 +163,11 @@
                         <div class="col-md-8">
                             <div class="card-body">
                                 <h5 class="card-title">Neil Gaiman</h5>
-                                <p class="card-text">Neil Richard Gaiman, autor de ficción, novelas, cómics, novelas gráficas, no ficción, teatro de audio, películas e historietas y escritor británico. Cultiva el género fantástico. </p>
-                                <p class="card-text"><small class="text-muted">Sus obras incluyen la serie de cómics The Sandman y novelas Stardust, Coraline y El libro del Cementerio.</small></p>
+                                <p class="card-text">Neil Richard Gaiman, autor de ficción, novelas, cómics, novelas
+                                    gráficas, no ficción, teatro de audio, películas e historietas y escritor británico.
+                                    Cultiva el género fantástico. </p>
+                                <p class="card-text"><small class="text-muted">Sus obras incluyen la serie de cómics The
+                                        Sandman y novelas Stardust, Coraline y El libro del Cementerio.</small></p>
                             </div>
                         </div>
                     </div>
@@ -181,13 +190,13 @@
                                         <img src="../assets/img/Gaiman03.jpeg" class="d-block w-100" alt="Gaiman03">
                                     </div>
                                 </div>
-                                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade4"
-                                    data-bs-slide="prev">
+                                <button class="carousel-control-prev" type="button"
+                                    data-bs-target="#carouselExampleFade4" data-bs-slide="prev">
                                     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                                     <span class="visually-hidden">Previous</span>
                                 </button>
-                                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade4"
-                                    data-bs-slide="next">
+                                <button class="carousel-control-next" type="button"
+                                    data-bs-target="#carouselExampleFade4" data-bs-slide="next">
                                     <span class="carousel-control-next-icon" aria-hidden="true"></span>
                                     <span class="visually-hidden">Next</span>
                                 </button>
@@ -197,8 +206,11 @@
                         <div class="col-md-8">
                             <div class="card-body">
                                 <h5 class="card-title">Neil Gaiman</h5>
-                                <p class="card-text">Neil Richard Gaiman, autor de ficción, novelas, cómics, novelas gráficas, no ficción, teatro de audio, películas e historietas y escritor británico. Cultiva el género fantástico. </p>
-                                <p class="card-text"><small class="text-muted">Sus obras incluyen la serie de cómics The Sandman y novelas Stardust, Coraline y El libro del Cementerio.</small></p>
+                                <p class="card-text">Neil Richard Gaiman, autor de ficción, novelas, cómics, novelas
+                                    gráficas, no ficción, teatro de audio, películas e historietas y escritor británico.
+                                    Cultiva el género fantástico. </p>
+                                <p class="card-text"><small class="text-muted">Sus obras incluyen la serie de cómics The
+                                        Sandman y novelas Stardust, Coraline y El libro del Cementerio.</small></p>
                             </div>
                         </div>
                     </div>
@@ -215,8 +227,8 @@
             <span class="d-flex justify-content-end">
                 <span><a class="text-muted text-decoration-none lh-1 footer__link-mine mx-3"
                         href="Tienda.html">Tienda</a></span>
-                <span><a class="text-muted text-decoration-none lh-1 footer__link-mine mx-3" href="https://www.instagram.com"
-                        target="_blank">Redes Sociales</a></span>
+                <span><a class="text-muted text-decoration-none lh-1 footer__link-mine mx-3"
+                        href="https://www.instagram.com" target="_blank">Redes Sociales</a></span>
                 <span><a class="text-muted text-decoration-none lh-1 footer__link-mine"
                         href="https://github.com/lucelaya" target="_blank">Lucelaya</a></span>
                 <span class="text-muted ">&copy; 2022</span>
