--- a/Pages/Dibujantes.html
+++ b/Pages/Dibujantes.html
@@ -45,7 +45,7 @@
 
     <!-- main -->
     <main class="container">
-        <h1 class="mt-3 text-center">Dibujantes</h1>
+        <h1 class="mt-3 text-centerfade-mine"><span class="fade-mine__content">Dibujantes</span></h1>
         <!-- cards de Dibujantes -->
         <div class="row row-cols-1 row-cols-md-2 g-4">
             <!-- invertimos el orden de las inpares para probar, igual solo se ve bien en desktop-->
@@ -55,8 +55,12 @@
                         <div class="col-md-8">
                             <div class="card-body">
                                 <h5 class="card-title">Dave McKean</h5>
-                                <p class="card-text">Nacido en Maidenhead, Inglaterra, el 10 de noviembre de 1963 y es uno de los más renombrados ilustradores y diseñadores de Gran Bretaña y el mundo entero. Su poder creativo y artístico deslumbra a todos los amantes del diseño y la ilustración. Es además fotógrafo, músico y un incipiente director de cine.</p>
-                                <p class="card-text"><small class="text-muted">Obras notables: Orquídea Negra, Arkham Asylum: A Serious House on Serious Earth, The Sandman (portadas).</small></p>
+                                <p class="card-text">Nacido en Maidenhead, Inglaterra, el 10 de noviembre de 1963 y es
+                                    uno de los más renombrados ilustradores y diseñadores de Gran Bretaña y el mundo
+                                    entero. Su poder creativo y artístico deslumbra a todos los amantes del diseño y la
+                                    ilustración. Es además fotógrafo, músico y un incipiente director de cine.</p>
+                                <p class="card-text"><small class="text-muted">Obras notables: Orquídea Negra, Arkham
+                                        Asylum: A Serious House on Serious Earth, The Sandman (portadas).</small></p>
                             </div>
                         </div>
                         <div class="col-md-4">
@@ -72,13 +76,13 @@
                                         <img src="../assets/img/dave03.jpeg" class="d-block w-100" alt="dave03">
                                     </div>
                                 </div>
-                                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade1"
-                                    data-bs-slide="prev">
+                                <button class="carousel-control-prev" type="button"
+                                    data-bs-target="#carouselExampleFade1" data-bs-slide="prev">
                                     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                                     <span class="visually-hidden">Previous</span>
                                 </button>
-                                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade1"
-                                    data-bs-slide="next">
+                                <button class="carousel-control-next" type="button"
+                                    data-bs-target="#carouselExampleFade1" data-bs-slide="next">
                                     <span class="carousel-control-next-icon" aria-hidden="true"></span>
                                     <span class="visually-hidden">Next</span>
                                 </button>
@@ -104,13 +108,13 @@
                                         <img src="../assets/img/dave03.jpeg" class="d-block w-100" alt="dave03">
                                     </div>
                                 </div>
-                                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade2"
-                                    data-bs-slide="prev">
+                                <button class="carousel-control-prev" type="button"
+                                    data-bs-target="#carouselExampleFade2" data-bs-slide="prev">
                                     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                                     <span class="visually-hidden">Previous</span>
                                 </button>
-                                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade2"
-                                    data-bs-slide="next">
+                                <button class="carousel-control-next" type="button"
+                                    data-bs-target="#carouselExampleFade2" data-bs-slide="next">
                                     <span class="carousel-control-next-icon" aria-hidden="true"></span>
                                     <span class="visually-hidden">Next</span>
                                 </button>
@@ -119,22 +123,30 @@
                         <div class="col-md-8">
                             <div class="card-body">
                                 <h5 class="card-title">Dave McKean</h5>
-                                <p class="card-text">Nacido en Maidenhead, Inglaterra, el 10 de noviembre de 1963 y es uno de los más renombrados ilustradores y diseñadores de Gran Bretaña y el mundo entero. Su poder creativo y artístico deslumbra a todos los amantes del diseño y la ilustración. Es además fotógrafo, músico y un incipiente director de cine.</p>
-                                <p class="card-text"><small class="text-muted">Obras notables: Orquídea Negra, Arkham Asylum: A Serious House on Serious Earth, The Sandman (portadas).</small></p>
-                           </div>
+                                <p class="card-text">Nacido en Maidenhead, Inglaterra, el 10 de noviembre de 1963 y es
+                                    uno de los más renombrados ilustradores y diseñadores de Gran Bretaña y el mundo
+                                    entero. Su poder creativo y artístico deslumbra a todos los amantes del diseño y la
+                                    ilustración. Es además fotógrafo, músico y un incipiente director de cine.</p>
+                                <p class="card-text"><small class="text-muted">Obras notables: Orquídea Negra, Arkham
+                                        Asylum: A Serious House on Serious Earth, The Sandman (portadas).</small></p>
+                            </div>
                         </div>
                     </div>
                 </div>
             </div>
-            
+
             <div class="col">
                 <div class="card mb-3" style="max-width: 540px;">
                     <div class="row g-0">
                         <div class="col-md-8">
                             <div class="card-body">
                                 <h5 class="card-title">Dave McKean</h5>
-                                <p class="card-text">Nacido en Maidenhead, Inglaterra, el 10 de noviembre de 1963 y es uno de los más renombrados ilustradores y diseñadores de Gran Bretaña y el mundo entero. Su poder creativo y artístico deslumbra a todos los amantes del diseño y la ilustración. Es además fotógrafo, músico y un incipiente director de cine.</p>
-                                <p class="card-text"><small class="text-muted">Obras notables: Orquídea Negra, Arkham Asylum: A Serious House on Serious Earth, The Sandman (portadas).</small></p>
+                                <p class="card-text">Nacido en Maidenhead, Inglaterra, el 10 de noviembre de 1963 y es
+                                    uno de los más renombrados ilustradores y diseñadores de Gran Bretaña y el mundo
+                                    entero. Su poder creativo y artístico deslumbra a todos los amantes del diseño y la
+                                    ilustración. Es además fotógrafo, músico y un incipiente director de cine.</p>
+                                <p class="card-text"><small class="text-muted">Obras notables: Orquídea Negra, Arkham
+                                        Asylum: A Serious House on Serious Earth, The Sandman (portadas).</small></p>
                             </div>
                         </div>
                         <div class="col-md-4">
@@ -150,13 +162,13 @@
                                         <img src="../assets/img/dave03.jpeg" class="d-block w-100" alt="dave03">
                                     </div>
                                 </div>
-                                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade3"
-                                    data-bs-slide="prev">
+                                <button class="carousel-control-prev" type="button"
+                                    data-bs-target="#carouselExampleFade3" data-bs-slide="prev">
                                     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                                     <span class="visually-hidden">Previous</span>
                                 </button>
-                                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade3"
-                                    data-bs-slide="next">
+                                <button class="carousel-control-next" type="button"
+                                    data-bs-target="#carouselExampleFade3" data-bs-slide="next">
                                     <span class="carousel-control-next-icon" aria-hidden="true"></span>
                                     <span class="visually-hidden">Next</span>
                                 </button>
@@ -182,13 +194,13 @@
                                         <img src="../assets/img/dave03.jpeg" class="d-block w-100" alt="dave03">
                                     </div>
                                 </div>
-                                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade4"
-                                    data-bs-slide="prev">
+                                <button class="carousel-control-prev" type="button"
+                                    data-bs-target="#carouselExampleFade4" data-bs-slide="prev">
                                     <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                                     <span class="visually-hidden">Previous</span>
                                 </button>
-                                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade4"
-                                    data-bs-slide="next">
+                                <button class="carousel-control-next" type="button"
+                                    data-bs-target="#carouselExampleFade4" data-bs-slide="next">
                                     <span class="carousel-control-next-icon" aria-hidden="true"></span>
                                     <span class="visually-hidden">Next</span>
                                 </button>
@@ -198,8 +210,12 @@
                         <div class="col-md-8">
                             <div class="card-body">
                                 <h5 class="card-title">Dave McKean</h5>
-                                <p class="card-text">Nacido en Maidenhead, Inglaterra, el 10 de noviembre de 1963 y es uno de los más renombrados ilustradores y diseñadores de Gran Bretaña y el mundo entero. Su poder creativo y artístico deslumbra a todos los amantes del diseño y la ilustración. Es además fotógrafo, músico y un incipiente director de cine.</p>
-                                <p class="card-text"><small class="text-muted">Obras notables: Orquídea Negra, Arkham Asylum: A Serious House on Serious Earth, The Sandman (portadas).</small></p>
+                                <p class="card-text">Nacido en Maidenhead, Inglaterra, el 10 de noviembre de 1963 y es
+                                    uno de los más renombrados ilustradores y diseñadores de Gran Bretaña y el mundo
+                                    entero. Su poder creativo y artístico deslumbra a todos los amantes del diseño y la
+                                    ilustración. Es además fotógrafo, músico y un incipiente director de cine.</p>
+                                <p class="card-text"><small class="text-muted">Obras notables: Orquídea Negra, Arkham
+                                        Asylum: A Serious House on Serious Earth, The Sandman (portadas).</small></p>
                             </div>
                         </div>
                     </div>
@@ -216,8 +232,8 @@
             <span class="d-flex justify-content-end">
                 <span><a class="text-muted text-decoration-none lh-1 footer__link-mine mx-3"
                         href="Tienda.html">Tienda</a></span>
-                <span><a class="text-muted text-decoration-none lh-1 footer__link-mine mx-3" href="https://www.instagram.com"
-                        target="_blank">Redes Sociales</a></span>
+                <span><a class="text-muted text-decoration-none lh-1 footer__link-mine mx-3"
+                        href="https://www.instagram.com" target="_blank">Redes Sociales</a></span>
                 <span><a class="text-muted text-decoration-none lh-1 footer__link-mine"
                         href="https://github.com/lucelaya" target="_blank">Lucelaya</a></span>
                 <span class="text-muted ">&copy; 2022</span>
