--- a/Pages/Series.html
+++ b/Pages/Series.html
@@ -45,7 +45,9 @@
 
     <!-- main -->
     <main class="container">
-      <h1 class="text-center">Series</h1>
+      <h1 class="mt-3 text-center fade-mine"><span class="fade-mine__content">Series</span></h1>
+      <article class="serie">
+        <h2 class="serie__titulo">The Sandman</h2>
         <!-- carrusel de tapas de la serie -->
         <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
             <div class="carousel-indicators">
@@ -74,13 +76,124 @@
             </button>
           </div>
           <!-- /carrusel de tapas de la serie -->
-            <!--Info. de la serie-->
-            <ul class="list-unstyled itemDesc-mine">
-                <li><p>Sandman, para empezar, es la colección de comics más unánimemente aclamada por crítica y público en los últimos años y considerada la más importante contribución de la década de los 90 al noveno arte. En ella, su guionista Neil Gaiman nos presenta a Sueño, un ser más allá de un Dios, conocido por los griegos como Morfeo y cuyo mito de poner arena en tus ojos cuando duermes viene a dar título a la colección. Así entendido, Sueño es la representación humana de esa parte oculta de la existencia que discurre paralela a la vigilia y que no es sino el sueño propiamente dicho, la fantasía si lo preferís. Sin embargo, Sueño no es único en su especie y pertenece a una antigua familia anterior aún al Universo, los Eternos, compuesta por 7 hermanos, por orden de edad los siguientes: Destino, Muerte, Sueño, Destrucción, Deseo, Desespero y Delirio.</p></li>
-                <li><p><b>Guion:</b> Neil Gaiman</p></li>
-                <li><p><b>Dibujo:</b> Dave McKean</p></li>
-            </ul>
-
+          <!--Info. de la serie-->
+          <ul class="list-unstyled serie__desc">
+              <li><p>Sandman, para empezar, es la colección de comics más unánimemente aclamada por crítica y público en los últimos años y considerada la más importante contribución de la década de los 90 al noveno arte. En ella, su guionista Neil Gaiman nos presenta a Sueño, un ser más allá de un Dios, conocido por los griegos como Morfeo y cuyo mito de poner arena en tus ojos cuando duermes viene a dar título a la colección. Así entendido, Sueño es la representación humana de esa parte oculta de la existencia que discurre paralela a la vigilia y que no es sino el sueño propiamente dicho, la fantasía si lo preferís. Sin embargo, Sueño no es único en su especie y pertenece a una antigua familia anterior aún al Universo, los Eternos, compuesta por 7 hermanos, por orden de edad los siguientes: Destino, Muerte, Sueño, Destrucción, Deseo, Desespero y Delirio.</p></li>
+              <li><p><b>Guion:</b> Neil Gaiman</p></li>
+              <li><p><b>Dibujo:</b> Dave McKean</p></li>
+          </ul>
+      </article>
+      <article class="serie">
+        <h2 class="serie__titulo">100 Balas</h2>
+        <!-- carrusel de tapas de la serie -->
+        <div id="carouselExampleIndicators1" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-indicators">
+              <button type="button" data-bs-target="#carouselExampleIndicators1" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+              <button type="button" data-bs-target="#carouselExampleIndicators1" data-bs-slide-to="1" aria-label="Slide 2"></button>
+              <button type="button" data-bs-target="#carouselExampleIndicators1" data-bs-slide-to="2" aria-label="Slide 3"></button>
+            </div>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="../assets/img/Balas001.jpeg" class="d-block w-100 p-" alt="Balas001" title="Balas001">
+              </div>
+              <div class="carousel-item">
+                <img src="../assets/img/Balas002.jpeg" class="d-block w-100" alt="Balas002" title="Balas002">
+              </div>
+              <div class="carousel-item">
+                <img src="../assets/img/Balas003.jpeg" class="d-block w-100" alt="Balas003" title="Balas003">
+              </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators1" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators1" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
+          <!-- /carrusel de tapas de la serie -->
+          <!--Info. de la serie-->
+          <ul class="list-unstyled serie__desc">
+              <li><p>Serie negra e intriga. 100 Bullets (en inglés) nos cuenta las historias de diferentes personajes a los que un día un misterioso desconocido les entrega una pistola y 100 balas irrastreables, además de pruebas sobre la culpabilidad de alguien cercano a ellos que les ha destrozado la vida. Así, en cada historia vemos como los diferentes protagonistas tienen la posibilidad de vengarse con total impunidad y la decisión sobre cometer el crimen o no queda enteramente en su manos.</p></li>
+              <li><p><b>Guion:</b> Brian Azzarello</p></li>
+              <li><p><b>Dibujo:</b> Eduardo Risso</p></li>
+          </ul>
+      </article>
+      <article class="serie">
+        <h2 class="serie__titulo">Y: El último hombre</h2>
+        <!-- carrusel de tapas de la serie -->
+        <div id="carouselExampleIndicators2" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-indicators">
+              <button type="button" data-bs-target="#carouselExampleIndicators2" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+              <button type="button" data-bs-target="#carouselExampleIndicators2" data-bs-slide-to="1" aria-label="Slide 2"></button>
+              <button type="button" data-bs-target="#carouselExampleIndicators2" data-bs-slide-to="2" aria-label="Slide 3"></button>
+            </div>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="../assets/img/YTLM01.jpeg" class="d-block w-100 p-" alt="Y el ultimo hombre 001" title="Y el ultimo hombre 001">
+              </div>
+              <div class="carousel-item">
+                <img src="../assets/img/YTLM02.jpeg" class="d-block w-100" alt="Y el ultimo hombre 002" title="Y el ultimo hombre 002">
+              </div>
+              <div class="carousel-item">
+                <img src="../assets/img/YTLM03.jpeg" class="d-block w-100" alt="Y el ultimo hombre 003" title="Y el ultimo hombre 003">
+              </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators2" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators2" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
+          <!-- /carrusel de tapas de la serie -->
+          <!--Info. de la serie-->
+          <ul class="list-unstyled serie__desc">
+              <li><p>La serie plantea que algo, presumiblemente una plaga de origen desconocido, acaba espontáneamente y de manera fulminante, con la vida de cualquier ser con el cromosoma "Y", incluidos embriones, huevos fertilizados y espermatozoides. Las únicas excepciones en todo el planeta son el protagonista, Yorick Brown, un joven neoyorquino aprendiz de escapista, y su mascota, un mono capuchino llamado Ampersand. Acompañado por una agente de una organización secreta de los Estados Unidos, la agente 355, y la Dra. Mann, Yorick intenta encontrar a su novia, Beth, que se encontraba en Australia en el momento que se desató la plaga. En su camino descubrirá cómo ha cambiado el mundo con la desaparición de los hombres y evitará los peligros que le acechan al ser el último de ellos: Los servicios secretos israelíes... Un grupo de extremistas femenistas autodenominada Las Hijas de las Amazonas... Todas, por un motivo u otro, intentarán dar con él.</p></li>
+              <li><p><b>Guion:</b> Brian K. Vaughan</p></li>
+              <li><p><b>Dibujo:</b> Pia Guerra y J. G. Jones</p></li>
+          </ul>
+      </article>
+      <article class="serie">
+        <h2 class="serie__titulo">Transmetropolitan</h2>
+        <!-- carrusel de tapas de la serie -->
+        <div id="carouselExampleIndicators3" class="carousel slide" data-bs-ride="carousel">
+            <div class="carousel-indicators">
+              <button type="button" data-bs-target="#carouselExampleIndicators3" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+              <button type="button" data-bs-target="#carouselExampleIndicators3" data-bs-slide-to="1" aria-label="Slide 2"></button>
+              <button type="button" data-bs-target="#carouselExampleIndicators3" data-bs-slide-to="2" aria-label="Slide 3"></button>
+            </div>
+            <div class="carousel-inner">
+              <div class="carousel-item active">
+                <img src="../assets/img/Trans01.jpeg" class="d-block w-100 p-" alt="Trasnsmetropolitan001" title="Trasnsmetropolitan001">
+              </div>
+              <div class="carousel-item">
+                <img src="../assets/img/Trans02.jpeg" class="d-block w-100" alt="Trasnsmetropolitan002" title="Trasnsmetropolitan002">
+              </div>
+              <div class="carousel-item">
+                <img src="../assets/img/Trans03.jpeg" class="d-block w-100" alt="Trasnsmetropolitan003" title="Trasnsmetropolitan003">
+              </div>
+            </div>
+            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators3" data-bs-slide="prev">
+              <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Previous</span>
+            </button>
+            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators3" data-bs-slide="next">
+              <span class="carousel-control-next-icon" aria-hidden="true"></span>
+              <span class="visually-hidden">Next</span>
+            </button>
+          </div>
+          <!-- /carrusel de tapas de la serie -->
+          <!--Info. de la serie-->
+          <ul class="list-unstyled serie__desc">
+              <li><p>Estamos en una gran metropolis de un indeterminado futuro. Spider Jerusalem es un periodista que tras alcanzar la fama hace cinco años abandonó la ciudad para vivir aislado en la montaña. Ahora se ve obligado a volver a la ciudad y volver a trabajar, encargándose de una columna de opinión semanal en un periódico, donde habla de diferentes temas de actualidad social. La serie gira alrededor del proceso de investigación y documentación que Spider realiza sobre cada tema, que nos sirve para conocer la sociedad en la que se mueve el protagonista, a la vez que vamos conociendo un poco mejor al personaje y algunos detalles de su pasado.</p></li>
+              <li><p><b>Guion:</b> Warren Ellis</p></li>
+              <li><p><b>Dibujo:</b> Darick Robertson</p></li>
+          </ul>
+      </article>
     </main>
     <!-- /main -->
 
