--- a/Pages/Tienda.html
+++ b/Pages/Tienda.html
@@ -45,33 +45,38 @@
 
     <!-- main -->
     <main class="container">
-        <h1 class="mt-3 text-center">Tienda</h1>
-        <p class="lead">Existen distintas ediciones sobre los titulos, contactenos, y se le brindaran opciones de compra.</p>
+        <h1 class="mt-3 text-centerfade-mine"><span class="fade-mine__content">Tienda</span></h1>
+        <p class="lead">Existen distintas ediciones sobre los titulos, contactenos, y se le brindaran opciones de
+            compra.</p>
         <!-- Formulario de contacto -->
         <h2 class="mb-3 h5">Formulario de contacto</h2>
         <form class="row g-3 form-mine mb-2">
             <div class="col-md-6">
                 <label for="inputName" class="form-label">Nombre</label>
-              <input type="text" class="form-control field-mine" id="inputName" placeholder="Escriba su Nombre" aria-label="Nombre">
+                <input type="text" class="form-control field-mine" id="inputName" placeholder="Escriba su Nombre"
+                    aria-label="Nombre">
             </div>
             <div class="col-md-6">
                 <label for="inputLastName" class="form-label">Apellido</label>
-              <input type="text" class="form-control field-mine" id="inputLastName" placeholder="Escriba su Apellido" aria-label="Apellido">
+                <input type="text" class="form-control field-mine" id="inputLastName" placeholder="Escriba su Apellido"
+                    aria-label="Apellido">
             </div>
             <div class="col-md-12">
                 <label for="inputEmail4" class="form-label">E-mail</label>
-                <input type="email" class="form-control field-mine" id="inputEmail4" placeholder="Escriba su E-Mail" aria-label="E-Mail">
+                <input type="email" class="form-control field-mine" id="inputEmail4" placeholder="Escriba su E-Mail"
+                    aria-label="E-Mail">
             </div>
             <div class="col-12">
                 <label for="exampleFormControlTextarea1" class="form-label">Comentarios</label>
-                <textarea class="form-control" placeholder="Puede dejar un comentario aqui" id="exampleFormControlTextarea1" rows="3"></textarea>
+                <textarea class="form-control" placeholder="Puede dejar un comentario aqui"
+                    id="exampleFormControlTextarea1" rows="3"></textarea>
             </div>
             <div class="col-12">
                 <div class="form-check">
-                  <input class="form-check-input" type="checkbox" id="gridCheck" aria-label="checkNewsletter">
-                  <label class="form-check-label" for="gridCheck">
-                    Desea recibir el newsletter?
-                  </label>
+                    <input class="form-check-input" type="checkbox" id="gridCheck" aria-label="checkNewsletter">
+                    <label class="form-check-label" for="gridCheck">
+                        Desea recibir el newsletter?
+                    </label>
                 </div>
             </div>
             <div class="d-grid gap-2 center-content mb-2">
@@ -91,8 +96,8 @@
             <span class="d-flex justify-content-end">
                 <span><a class="text-muted text-decoration-none lh-1 footer__link-mine mx-3"
                         href="Tienda.html">Tienda</a></span>
-                <span><a class="text-muted text-decoration-none lh-1 footer__link-mine mx-3" href="https://www.instagram.com"
-                        target="_blank">Redes Sociales</a></span>
+                <span><a class="text-muted text-decoration-none lh-1 footer__link-mine mx-3"
+                        href="https://www.instagram.com" target="_blank">Redes Sociales</a></span>
                 <span><a class="text-muted text-decoration-none lh-1 footer__link-mine"
                         href="https://github.com/lucelaya" target="_blank">Lucelaya</a></span>
                 <span class="text-muted ">&copy; 2022</span>
