Segunda entrega del Proyecto Final

--- a/index.html
+++ b/index.html
@@ -56,12 +56,9 @@
         </h2>
         <!-- Aca estaria bueno hacer un slider de productos o contenido -->
         <div class="cards-mine">
-            <div><a href="./Pages/Guionistas.html"><img class="card-mine" src="./assets/img/Gaiman01.jpeg" alt=""></a>
-            </div>
-            <div><a href="./Pages/Series.html"><img class="card-mine" src="./assets/img/Sandman001.jpg" alt=""></a>
-            </div>
-            <div><a href="./Pages/Dibujantes.html"><img class="card-mine" src="./assets/img/dave01.jpeg" alt=""></a>
-            </div>
+            <div><a href="./Pages/Guionistas.html"><img class="card-mine" src="./assets/img/Gaiman01.jpeg" alt=""></a></div>
+            <div><a href="./Pages/Series.html"><img class="card-mine" src="./assets/img/Sandman001.jpg" alt=""></a></div>
+            <div><a href="./Pages/Dibujantes.html"><img class="card-mine" src="./assets/img/dave01.jpeg" alt=""></a></div>
         </div>
     </main>
     <!-- /main -->
