Normalizacion img-cards a 320x480

--- a/Pages/Guionistas.html
+++ b/Pages/Guionistas.html
@@ -101,7 +101,7 @@
                                         <img src="../assets/img/Ellis01.jpeg" class="d-block w-100" alt="WarrenEllis01">
                                     </div>
                                     <div class="carousel-item">
-                                        <img src="../assets/img/Ellis02.webp" class="d-block w-100" alt="WarrenElis02">
+                                        <img src="../assets/img/Ellis02.jpeg" class="d-block w-100" alt="WarrenElis02">
                                     </div>
                                 </div>
                                 <button class="carousel-control-prev" type="button"
@@ -170,7 +170,7 @@
                             <div id="carouselExampleFade4" class="carousel slide carousel-fade" data-bs-ride="carousel">
                                 <div class="carousel-inner">
                                     <div class="carousel-item active">
-                                        <img src="../assets/img/Azzarello01.webp" class="d-block w-100" alt="Azzarello01">
+                                        <img src="../assets/img/Azzarello01.jpeg" class="d-block w-100" alt="Azzarello01">
                                     </div>
                                     <div class="carousel-item">
                                         <img src="../assets/img/Azzarello02.jpeg" class="d-block w-100" alt="Azzarello02">
