--- a/Pages/Dibujantes.html
+++ b/Pages/Dibujantes.html
@@ -134,7 +134,7 @@
                     <div class="row g-0">
                         <div class="col-md-8">
                             <div class="card-body">
-                                <h5 class="card-title">Pia Guearra</h5>
+                                <h5 class="card-title">Pia Guerra</h5>
                                 <p class="card-text">Pia Jasmin Guerra, es una dibujante de cómics canadiense conocida principalmente por su trabajo como creadora y dibujante de Y: El último hombre.​</p>
                                 <p class="card-text"><small class="text-muted">Premios: Eisner Award for Best Artist/Penciler/Inker, Eisner Award for Best Continuing Series</small></p>
                             </div>
