SEO_Accesibilidad_Performance

--- a/Pages/Tienda.html
+++ b/Pages/Tienda.html
@@ -11,11 +11,13 @@
     <!-- Mis estilos -->
     <link rel="stylesheet" href="../assets/css/style.css">
     <title>Lucien's Library-Tienda</title>
+    <!-- SEO -->
+    <meta name="Description" content="Tienda, Contacto. Ciudad Autónoma de Buenos Aires, +54 11 99999999, Pedidos@LuciensLibrary.com">
+    <meta name="Keywords" content="Tienda, Comic, Manga, Cuentos, Novela, Gráfica">
 </head>
 
 <body class="d-flex flex-column h-100 bg-light">
     <header>
-        <!-- <h1><a class="nav-link active" href="./index.html">Lucien's Library</a></h1> -->
         <!-- nav -->
         <nav class="navbar navbar-expand-md navbar-dark bg-dark">
             <div class="container-fluid">
@@ -45,6 +47,7 @@
 
     <!-- main -->
     <main class="container">
+        <!-- Titulo de la pagina, Tienda -->
         <h1 class="mt-3"><span class="fade-mine__content">Tienda</span></h1>
         <p class="lead">Existen distintas ediciones sobre los titulos, contactenos, y se le brindaran opciones de
             compra.</p>
