--- a/Pages/Guionistas.html
+++ b/Pages/Guionistas.html
@@ -11,11 +11,13 @@
     <!-- Mis estilos -->
     <link rel="stylesheet" href="../assets/css/style.css">
     <title>Lucien's Library-Guionistas</title>
+    <!-- SEO -->
+    <meta name="Description" content="Guionistas. Biografías, datos adicionales y sus mejores obras y premios.">
+    <meta name="Keywords" content="Biografías, Escritores, Guionistas">
 </head>
 
 <body class="d-flex flex-column h-100 bg-light">
     <header>
-        <!-- <h1><a class="nav-link active" href="./index.html">Lucien's Library</a></h1> -->
         <!-- nav -->
         <nav class="navbar navbar-expand-md navbar-dark bg-dark">
             <div class="container-fluid">
@@ -45,6 +47,7 @@
 
     <!-- main -->
     <main class="container">
+        <!-- Titulo de la pagina, Guionistas -->
         <h1 class="mt-3"><span class="fade-mine__content">Guionistas</span></h1>
         <!-- cards de guionistas -->
         <div class="row row-cols-1 row-cols-md-2 g-4">
