--- a/index.html
+++ b/index.html
@@ -11,15 +11,18 @@
     <!-- Mis estilos -->
     <link rel="stylesheet" href="./assets/css/style.css">
     <title>Lucien's Library</title>
+    <!-- SEO -->
+    <meta name="Description" content="Lucien’s Library. Encontra la mayor variedad de Comics, Manga, Novelas Gráficas, Ciudad Autónoma de Buenos Aires, +54 11 99999999, Pedidos@LuciensLibrary.com">
+    <meta name="Keywords" content="Revisteria, Comiqueria, Comic, Manga, Cuentos, Novela, Grafica, Biografias, Dibujantes, Ilustradores, Coloristas, Escritores, Guionistas, Envios">
 </head>
 
 <body class="d-flex flex-column h-100 bg-light">
     <header>
-        <!-- <h1><a class="nav-link active" href="./index.html">Lucien's Library</a></h1> -->
+        <!-- Solo en index, Luciens Library es Titulo H1, SEO -->
         <!-- nav -->
         <nav class="navbar navbar-expand-md navbar-dark bg-dark">
             <div class="container-fluid">
-                <a class="navbar-brand" href="./index.html">Lucien's Library</a>
+                <h1><a class="navbar-brand" href="./index.html">Lucien's Library</a></h1>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
@@ -45,8 +48,9 @@
 
     <!-- main -->
     <main class="container">
-        <!-- Quisas tenga que ver aca como dejo Lucien's Library solo como titulo o hacer link de home de la navbar como h1, veremos -->
-        <h1 class="mt-3">Bienvenido a Lucien's Library</h1>
+        <!-- Titulo del Index -->
+        <!-- Dejo el primer subtitulo del index con formato de H1 para que quede coherente con el resto de los titulos de los mains del sitio -->
+        <h2 class="h1 mt-3">Bienvenido a Lucien's Library</h2>
         <p class="lead">En este sitio vas a encontrar las mejores series del noveno arte.</p>
         <!-- Metemos una animacion sobre un texto -->
         <h2 class="fade-mine">
@@ -56,9 +60,9 @@
         </h2>
         <!-- Aca estaria bueno hacer un slider de productos o contenido -->
         <div class="cards-mine">
-            <div><a href="./Pages/Guionistas.html"><img class="card-mine" src="./assets/img/Gaiman01.jpeg" alt=""></a></div>
-            <div><a href="./Pages/Series.html"><img class="card-mine" src="./assets/img/Sandman001.jpg" alt=""></a></div>
-            <div><a href="./Pages/Dibujantes.html"><img class="card-mine" src="./assets/img/dave01.jpeg" alt=""></a></div>
+            <div><a href="./Pages/Guionistas.html"><img class="card-mine" src="./assets/img/Gaiman01.jpeg" alt="Guionistas"></a></div>
+            <div><a href="./Pages/Series.html"><img class="card-mine" src="./assets/img/Sandman001.jpg" alt="Series"></a></div>
+            <div><a href="./Pages/Dibujantes.html"><img class="card-mine" src="./assets/img/dave01.jpeg" alt="Dibujantes"></a></div>
         </div>
     </main>
     <!-- /main -->
