--- a/Pages/Series.html
+++ b/Pages/Series.html
@@ -49,6 +49,7 @@
     <main class="container">
       <!-- Titulo de la pagina, Series -->
       <h1 class="mt-3"><span class="fade-mine__content">Series</span></h1>
+      <!-- Sandman -->
       <article class="serie">
         <h2 class="serie__titulo">The Sandman</h2>
         <!-- carrusel de tapas de la serie -->
@@ -86,6 +87,7 @@
               <li><p><b>Dibujo:</b> Dave McKean</p></li>
           </ul>
       </article>
+      <!-- 100 Balas -->
       <article class="serie">
         <h2 class="serie__titulo">100 Balas</h2>
         <!-- carrusel de tapas de la serie -->
@@ -123,6 +125,7 @@
               <li><p><b>Dibujo:</b> Eduardo Risso</p></li>
           </ul>
       </article>
+      <!-- Y: El ultimo Hombre -->
       <article class="serie">
         <h2 class="serie__titulo">Y: El último hombre</h2>
         <!-- carrusel de tapas de la serie -->
@@ -160,6 +163,7 @@
               <li><p><b>Dibujo:</b> Pia Guerra y J. G. Jones</p></li>
           </ul>
       </article>
+      <!-- Transmetropolitan -->
       <article class="serie">
         <h2 class="serie__titulo">Transmetropolitan</h2>
         <!-- carrusel de tapas de la serie -->
