--- a/Pages/Tienda.html
+++ b/Pages/Tienda.html
@@ -83,8 +83,8 @@
                 </div>
             </div>
             <div class="d-grid gap-2 center-content mb-2">
-                <button type="submit" class="btn btn-primary button-mine">Enviar</button>
-                <button type="reset" class="btn btn-secondary button-mine">Borrar</button>
+                <button type="submit" class="btn btn-primary button-mine-enviar">Enviar</button>
+                <button type="reset" class="btn btn-secondary button-mine-borrar">Borrar</button>
             </div>
         </form>
 
