--- a/Pages/Dibujantes.html
+++ b/Pages/Dibujantes.html
@@ -50,11 +50,11 @@
         <!-- Titulo de la pagina, Dibujantes -->
         <h1 class="mt-3"><span class="fade-mine__content">Dibujantes</span></h1>
         <!-- cards de Dibujantes -->
-        <div class="row row-cols-1 row-cols-md-2 g-4">
+        <div class="row row-cols-1 row-cols-md-2">
             <!-- invertimos el orden de las inpares para probar, igual solo se ve bien en desktop-->
             <!-- DAVE MCKEAN -->
-            <div class="col">
-                <div class="card mb-3" style="max-width: 540px;">
+            <article class="col dibujante">
+                <div class="card mb-3 mt-3" style="max-width: 540px;">
                     <div class="row g-0">
                         <div class="col-md-8">
                             <div class="card-body">
@@ -94,10 +94,10 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </article>
             <!-- EDUEARDO RISSO -->
-            <div class="col">
-                <div class="card mb-3" style="max-width: 540px;">
+            <article class="col dibujante">
+                <div class="card mb-3 mt-3" style="max-width: 540px;">
                     <div class="row g-0">
                         <div class="col-md-4">
                             <div id="carouselExampleFade2" class="carousel slide carousel-fade" data-bs-ride="carousel">
@@ -130,10 +130,10 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </article>
             <!-- PIA GUERRA -->
-            <div class="col">
-                <div class="card mb-3" style="max-width: 540px;">
+            <article class="col dibujante">
+                <div class="card mb-3 mt-3" style="max-width: 540px;">
                     <div class="row g-0">
                         <div class="col-md-8">
                             <div class="card-body">
@@ -166,10 +166,10 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </article>
             <!-- DARRICK ROBERTSON -->
-            <div class="col">
-                <div class="card mb-3" style="max-width: 540px;">
+            <article class="col dibujante">
+                <div class="card mb-3 mt-3" style="max-width: 540px;">
                     <div class="row g-0">
                         <div class="col-md-4">
                             <div id="carouselExampleFade4" class="carousel slide carousel-fade" data-bs-ride="carousel">
@@ -203,7 +203,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </article>
         </div>
         <!-- /cards de Dibujantes -->
     </main>
