--- a/Pages/Guionistas.html
+++ b/Pages/Guionistas.html
@@ -50,10 +50,10 @@
         <!-- Titulo de la pagina, Guionistas -->
         <h1 class="mt-3"><span class="fade-mine__content">Guionistas</span></h1>
         <!-- cards de guionistas -->
-        <div class="row row-cols-1 row-cols-md-2 g-4">
+        <div class="row row-cols-1 row-cols-md-2">
             <!-- NEIL GAIMAN -->
-            <div class="col">
-                <div class="card mb-3" style="max-width: 540px;">
+            <article class="col guionista">
+                <div class="card mb-3 mt-3" style="max-width: 540px;">
                     <div class="row g-0">
                         <div class="col-md-4">
                             <div id="carouselExampleFade1" class="carousel slide carousel-fade" data-bs-ride="carousel">
@@ -92,10 +92,10 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </article>
             <!-- WARREN ELLIS -->
-            <div class="col">
-                <div class="card mb-3" style="max-width: 540px;">
+            <article class="col guionista">
+                <div class="card mb-3 mt-3" style="max-width: 540px;">
                     <div class="row g-0">
                         <div class="col-md-4">
                             <div id="carouselExampleFade2" class="carousel slide carousel-fade" data-bs-ride="carousel">
@@ -128,10 +128,10 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </article>
             <!-- BRIAN K VAUGHAM -->
-            <div class="col">
-                <div class="card mb-3" style="max-width: 540px;">
+            <article class="col guionista">
+                <div class="card mb-3 mt-3" style="max-width: 540px;">
                     <div class="row g-0">
                         <div class="col-md-4">
                             <div id="carouselExampleFade3" class="carousel slide carousel-fade" data-bs-ride="carousel">
@@ -164,10 +164,10 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </article>
             <!-- BRIAN AZZARELLO -->
-            <div class="col">
-                <div class="card mb-3" style="max-width: 540px;">
+            <article class="col guionista">
+                <div class="card mb-3 mt-3" style="max-width: 540px;">
                     <div class="row g-0">
                         <div class="col-md-4">
                             <div id="carouselExampleFade4" class="carousel slide carousel-fade" data-bs-ride="carousel">
@@ -201,7 +201,7 @@
                         </div>
                     </div>
                 </div>
-            </div>
+            </article>
         </div>
         <!-- /card de guionistas -->
     </main>
